# lokai

./: .env  .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
fixtures/: conversations.sql  messages.sql
migrations/: 001_init.down.sql  001_init.up.sql
src/: app.rs  assistant.rs  chat.rs  config.rs  conversations.rs  crud.rs  db.rs  event.rs  handler.rs  main.rs  models.rs  ollama.rs  prompt.rs  transcribe.rs  tui.rs  ui.rs
