[package]
name = "lokai-tui"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Lukasz Kielar <kielar.lukasz@hotmail.com>"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
ratatui = "0.28"
serde = { version = "1", features = ["derive"] }
# Tried to install latest (0.8.1 at the time of writing this), but it has a bug
sqlx = { version = "=0.8.0", default-features = false, features = [
    "chrono",
    "macros",
    "migrate",
    "runtime-tokio",
    "sqlite",
    "tls-native-tls",
] }
tokio = { version = "1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
