[package]
name = "lokai-tui"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Lukasz Kielar <kielar.lukasz@hotmail.com>"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
ratatui = "0.28"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Tried to install latest (0.8.1 at the time of writing this), but it has a bug
sqlx = { version = "=0.8.0", default-features = false, features = [
    "chrono",
    "macros",
    "migrate",
    "runtime-tokio",
    "sqlite",
    "tls-native-tls",
] }
tokio = { version = "1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
tui-textarea = { version = "0.6", features = ["ratatui", "crossterm"] }

[profile.dev]
opt-level = 1
overflow-checks = false

[profile.dev.build-override]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true
