[package]
name = "lokai"
version = "0.0.2"
edition = "2021"
license = "MIT"
authors = ["Lukasz Kielar <kielar.lukasz@hotmail.com>"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = { version = "0.28", features = ["event-stream"] }
dirs = "5.0"
futures = "0.3"
ratatui = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = [
    "chrono",
    "macros",
    "migrate",
    "runtime-tokio",
    "sqlite",
    "tls-native-tls",
] }
textwrap = "0.16"
tokio = { version = "1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
] }
tokio-util = "0.7"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["default", "env-filter"] }
tui-textarea = { version = "0.6", features = ["ratatui", "crossterm"] }
uuid = { version = "1.10.0", features = ["v4"] }

[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
kalosm = { version = "0.3", features = ["language", "metal", "sound"] }
kalosm-language = { version = "0.3", features = ["metal"] }
kalosm-sound = { version = "0.3", features = ["default", "metal"] }

[target.'cfg(not(all(target_os = "macos", target_arch = "aarch64")))'.dependencies]
kalosm = { version = "0.3", features = ["language", "sound"] }
kalosm-language = "0.3"
kalosm-sound = "0.3"

[profile.dev]
opt-level = 1
overflow-checks = false

[profile.dev.build-override]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true

[dev-dependencies]
rstest = "0.23"
